fix: layout on small screens

--- a/src/components/animation/FadeIn/FadeIn.module.scss
+++ b/src/components/animation/FadeIn/FadeIn.module.scss
@@ -1,5 +1,6 @@
 .fade {
   animation: fadein 500ms;
+  width: 100%;
 }
 
 @keyframes fadein {
