--- a/src/components/form/HomeSearchForm/HomeSearchForm.module.scss
+++ b/src/components/form/HomeSearchForm/HomeSearchForm.module.scss
@@ -1,3 +1,7 @@
 .container {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
+
+  @media screen and (min-width: 768px) {
+    font-size: 1.3rem;
+  }
 }
